# GloriousFlywheel

./: .bazelrc  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  BUILD.bazel  CONTRIBUTING.md  Justfile  LICENSE  MODULE.bazel  README.md  flake.nix  llms.md  llms.txt  package.json
.githooks/: commit-msg  pre-commit
.github/actions/setup-flywheel/: action.yml
.github/workflows/: pages.yml  test-arc-runners.yml
.gitlab/ci/jobs/: bazel-build.gitlab-ci.yml  nix-build.gitlab-ci.yml  nix-check.gitlab-ci.yml  runners-deploy.gitlab-ci.yml  smoke-tests.gitlab-ci.yml  tofu-apply.gitlab-ci.yml  tofu-plan.gitlab-ci.yml
.gitlab/ci/templates/: tofu-base.gitlab-ci.yml
app/src/: app.d.ts  hooks.server.ts
app/src/lib/components/auth/: LogoutModal.svelte
app/src/lib/components/metrics/: HPAGauge.svelte
app/src/lib/server/auth/: session.ts
app/src/lib/server/gitlab/__tests__/: client.test.ts
app/src/lib/server/k8s/__tests__/: client.test.ts
app/src/lib/server/prometheus/__tests__/: transform.test.ts
app/src/routes/: +layout.server.ts
app/src/routes/api/gitops/drift/: +server.ts
app/src/routes/api/runners/: +server.ts
app/src/routes/api/runners/[name]/pause/: +server.ts
app/src/routes/api/runners/[name]/resume/: +server.ts
app/src/routes/auth/callback/: +server.ts
app/src/routes/auth/logged-out/: +page.server.ts
app/src/routes/auth/login/: +page.svelte
app/src/routes/auth/logout/: +server.ts
app/src/routes/settings/: +page.svelte
ci-templates/: bates-ils-runners.gitlab-ci.yml
config/: organization-ha.example.yaml  organization-s3.example.yaml
docs/: customization-guide.md  greedy-build-pattern.md  quick-start.md
docs-site/: .gitignore  package.json
docs-site/scripts/: generate-llms-txt.js
docs-site/src/routes/: +layout.svelte  +page.svelte
docs/infrastructure/: overlay-creation.md
docs/k8s-reference/: README.md
docs/k8s-reference/base/: ingress.yaml
docs/runners/: README.md  docker-builds.md  hpa-tuning.md  load-testing.md  runbook.md  runner-selection.md  troubleshooting.md
examples/: README.md
examples/docker-project/: .gitlab-ci.yml
examples/k8s-deploy-project/: .gitlab-ci.yml
examples/nix-project/: .gitlab-ci.yml
scripts/: cache-warm.sh  ci-health-check.sh  generate-attic-token.sh
templates/dind-job/: template.yml
templates/docker-build/: template.yml
templates/docker-job/: template.yml
templates/k8s-deploy/: template.yml
templates/nix-job/: template.yml
templates/rocky8-job/: template.yml
templates/rocky9-job/: template.yml
tests/: validate-components.sh
tests/load/: hpa-load-test.sh
tofu/: BUILD.bazel
tofu/modules/: BUILD.bazel
tofu/modules/bazel-cache/: main.tf  variables.tf
tofu/modules/gitlab-runner/: locals.tf  main.tf  outputs.tf  variables.tf
tofu/modules/hpa-deployment/: main.tf  variables.tf
tofu/modules/minio-tenant/: lifecycle.tf  variables.tf
tofu/stacks/: BUILD.bazel
tofu/stacks/attic/: BUILD.bazel  Justfile  backend.tf  beehive.tfvars  main.tf  rigel.tfvars  variables.tf
tofu/stacks/bates-ils-runners/: beehive.tfvars
tofu/stacks/gitlab-runners/: BUILD.bazel  Justfile  beehive.tfvars  main.tf  outputs.tf  variables.tf
